--- a/src/main/java/views/client/ClientCreateView.form
+++ b/src/main/java/views/client/ClientCreateView.form
@@ -143,6 +143,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <selected value="true"/>
               <text value="Cliente"/>
             </properties>
           </component>
@@ -151,6 +152,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <enabled value="true"/>
               <text value="Particular"/>
             </properties>
           </component>
